# partisan

./: CHANGELOG.md  Dockerfile  Dockerfile.dev  README.md  bash_completion  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  create-release.yml  run-tests.yml
docker/: entrypoint.sh  install_pyenv.sh
src/partisan/: __init__.py  cli.py  exception.py  icommands.py  irods.py  metadata.py  version.py
tests/: __init__.py  conftest.py  irods_fixture.py  pytest.ini  test_baton_json_encoder.py  test_client.py  test_examples.py  test_icommands.py  test_irods.py  test_metadata.py  test_pool.py  test_regression.py
tests/.irods/: irods_environment.json
tests/data/ont/synthetic/multiplexed_experiment_001/20190904_1514_GA10000_flowcell101_cf751ba1/barcode01/fast5_fail/: multiplexed_experiment_001_1.fast5  multiplexed_experiment_001_2.fast5  multiplexed_experiment_001_3.fast5
tests/data/ont/synthetic/multiplexed_experiment_001/20190904_1514_GA10000_flowcell101_cf751ba1/barcode01/fast5_pass/: multiplexed_experiment_001_1.fast5  multiplexed_experiment_001_2.fast5  multiplexed_experiment_001_3.fast5
tests/data/ont/synthetic/multiplexed_experiment_001/20190904_1514_GA10000_flowcell101_cf751ba1/barcode01/fastq_fail/: multiplexed_experiment_001_1.fastq  multiplexed_experiment_001_2.fastq  multiplexed_experiment_001_3.fastq
tests/data/ont/synthetic/multiplexed_experiment_001/20190904_1514_GA10000_flowcell101_cf751ba1/barcode01/fastq_pass/: multiplexed_experiment_001_1.fastq  multiplexed_experiment_001_2.fastq  multiplexed_experiment_001_3.fastq
tests/data/ont/synthetic/multiplexed_experiment_001/20190904_1514_GA10000_flowcell101_cf751ba1/barcode02/fast5_fail/: multiplexed_experiment_001_1.fast5  multiplexed_experiment_001_2.fast5  multiplexed_experiment_001_3.fast5
tests/data/ont/synthetic/multiplexed_experiment_001/20190904_1514_GA10000_flowcell101_cf751ba1/barcode02/fast5_pass/: multiplexed_experiment_001_1.fast5  multiplexed_experiment_001_2.fast5  multiplexed_experiment_001_3.fast5
tests/data/ont/synthetic/multiplexed_experiment_001/20190904_1514_GA10000_flowcell101_cf751ba1/barcode02/fastq_fail/: multiplexed_experiment_001_1.fastq  multiplexed_experiment_001_2.fastq  multiplexed_experiment_001_3.fastq
tests/data/ont/synthetic/simple_experiment_001/20190904_1514_GA10000_flowcell011_69126024/: final_summary_flowcell011_69126024.txt  report_flowcell011_69126024.md
tests/data/ont/synthetic/simple_experiment_001/20190904_1514_GA10000_flowcell011_69126024/fast5_fail/: 20190904_1514_GA10000_flowcell011_69126024_1.fast5  20190904_1514_GA10000_flowcell011_69126024_2.fast5  20190904_1514_GA10000_flowcell011_69126024_3.fast5
tests/data/ont/synthetic/simple_experiment_001/20190904_1514_GA10000_flowcell011_69126024/fast5_pass/: 20190904_1514_GA10000_flowcell011_69126024_1.fast5  20190904_1514_GA10000_flowcell011_69126024_2.fast5  20190904_1514_GA10000_flowcell011_69126024_3.fast5
tests/data/ont/synthetic/simple_experiment_001/20190904_1514_GA10000_flowcell011_69126024/fastq_fail/: 20190904_1514_GA10000_flowcell011_69126024_1.fastq  20190904_1514_GA10000_flowcell011_69126024_2.fastq  20190904_1514_GA10000_flowcell011_69126024_3.fastq
tests/data/ont/synthetic/simple_experiment_001/20190904_1514_GA10000_flowcell011_69126024/fastq_pass/: 20190904_1514_GA10000_flowcell011_69126024_1.fastq  20190904_1514_GA10000_flowcell011_69126024_2.fastq  20190904_1514_GA10000_flowcell011_69126024_3.fastq
tests/data/recursive/level1/level2/: leaf1.txt  leaf2.txt
tests/data/special/: x.txt  z".txt
tests/data/special/a a/: y y.txt
tests/docker/: condarc  docker-entrypoint.sh  environment.yml  install_conda.sh  irods_environment.json
tests/docker-compose/: docker-compose.yml
(+123 files in other folders)
